# acp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/acp-core/: Cargo.toml
crates/acp-core/src/: config.rs  lib.rs
crates/acp-core/src/ops/: context.rs  exchange.rs  memory.rs  mod.rs  skills.rs  versioning.rs
crates/acp-core/src/protocol/: errors.rs  jsonrpc.rs  methods.rs  mod.rs
crates/acp-core/src/types/: agent.rs  common.rs  episode.rs  graph.rs  mod.rs  retention.rs  semantic.rs  skill.rs  version.rs
crates/acp-embeddings/: Cargo.toml
crates/acp-embeddings/src/: cache.rs  lib.rs  normalize.rs  provider.rs
crates/acp-embeddings/src/providers/: mock.rs  mod.rs  openai.rs
crates/acp-graph/: Cargo.toml
crates/acp-graph/src/: engine.rs  lib.rs
crates/acp-server/: Cargo.toml
crates/acp-server/src/: cli.rs  lib.rs  main.rs  server.rs
crates/acp-server/src/mcp/: handler.rs  tools.rs
crates/acp-server/src/transport/: stdio.rs
crates/acp-server/tests/: integration.rs
crates/acp-store/: Cargo.toml
crates/acp-store/src/: exchange.rs  graph.rs  lib.rs  memory.rs  schema.rs  skills.rs  store.rs  versioning.rs
docs/plans/: 2026-03-05-graph-wiring-skill-registry-design.md
