[workspace]
members = [
    "crates/acp-core",
    "crates/acp-store",
    "crates/acp-graph",
    "crates/acp-embeddings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/agx-dev/acp"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
async-trait = "0.1"
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
