[package]
name = "acp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP — Agent Context Protocol core types, traits and wire format"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
