[package]
name = "acp-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP embedding abstraction — multi-provider with caching"

[dependencies]
acp-core = { path = "../acp-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
openai = ["reqwest"]

[dev-dependencies]
tokio = { workspace = true }
