[package]
name = "acp-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP Context Graph engine — in-memory graph with traversal and subgraph extraction"

[dependencies]
acp-core = { path = "../acp-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
