[package]
name = "acp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP Server — assembles all components and exposes ACP via MCP (JSON-RPC stdio)"

[[bin]]
name = "acp-server"
path = "src/main.rs"

[dependencies]
acp-core = { path = "../acp-core" }
acp-store = { path = "../acp-store" }
acp-embeddings = { path = "../acp-embeddings" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { workspace = true }
