[package]
name = "acp-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP SQLite storage backend — implements acp-core traits"

[dependencies]
acp-core = { path = "../acp-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true }
